--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
-# .env.test
+# .env.example
 NODE_ENV=node_env
-DB_URI=uri_complete_de_connexion_a_la_bd   # This is the database URI for the test environment
+DB_URI=uri_complete_de_connexion_a_la_bd
 APP_PORT=port_de_l_application
 JWT_SECRET=secret_pour_generer_le_token
-DBMS=PostgreSQL # gestionnaire de base donnees (PostgreSQL ou MongoDB)
+DBMS=MongoDB
