--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/PMUFLASH/business-logic-server#readme",
   "dependencies": {
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "bcrypt": "^6.0.0",
@@ -37,11 +39,15 @@
     "module-alias": "^2.2.3",
     "mongoose": "^7.8.7",
     "mongoose-unique-validator": "^4.0.1",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
     "sequelize": "^6.37.6",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
